      + A contextual help message is available at prompt.
      + Progress bar refresh is set to a minimum of 10% to prevent
        too verbose output.
      + Select and multiselect questions look now more like debconf
        readline questions.
      + Define a ISEMPTY macro to deal with empty strings on s390.
  * Bastian Blank
    - Fix recognition of return in note.
  * Translations
    - Giuseppe Sacco
      - Italian translation update by Davide Viti (it.po)
    - Ognyan Kulev
      - Updated Bulgarian translation (bg.po).
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation (uk.po).
    - Pierre machard/Christian Perrier/French team
      - Updated French translation (fr.po)
    - Peter Mann
      - Updated Slovak translation (sk.po)
    - Dafydd Harries : Added Welsh translation (cy.po)
    - Carlos Z.F. Liu
      - Updated Simplified Chinese translation (zh_CN.po)
    - Dennis Stampfer
      - Update German translation (de.po)
    - Kęstutis Biliūnas
      - Updated Lithuanian translation (lt.po)
    - Konstantinos Margaritis
      - Updated Greek translation (el.po)
    - Andre Dahlqvist
      - Update Swedish translation (sv.po)
    - Håvard Korsvoll
      - Updated Norwegian, nynorsk (nn.po) translation.
    - André Luís Lopes
      - Updated Brazilian Portuguese translation (pt_BR.po)
    - Bart Cornelis
      - Updated Dutch translation (nl.po)
    - Peter Mann
      - Updated Slovak translation (sk.po)
    - Jordi Mallach
      - Updated Catalan translation (ca.po)
    - Petter Reinholdtsen
      - Updated Norwegian Bokmål translation (nb.po).
    - Elian Myftiu
      - Update Albanian translation (sq.po)

 -- Bart Cornelis <cobaco@linux.be>  Thu, 11 Mar 2004 09:15:41 +0100

cdebconf (0.57) unstable; urgency=low

  * Denis Barbier
    - In cdebconf-udeb.templates, set debconf/showold to false by
      default.  This is possible now that main-menu temporarily
      changes this value to true when reconfiguring a package.