@@ -18,6 +18,7 @@ cdebconf (0.58) UNRELEASED; urgency=low
       + Define a ISEMPTY macro to deal with empty strings on s390.
   * Bastian Blank
     - Fix recognition of return in note.
+    - Reorganize fd dups to properly handle closed stdin/-out.
   * Translations
     - Giuseppe Sacco
       - Italian translation update by Davide Viti (it.po)
@@ -55,7 +56,7 @@ cdebconf (0.58) UNRELEASED; urgency=low
     - Elian Myftiu
       - Update Albanian translation (sq.po)
 
- -- Bart Cornelis <cobaco@linux.be>  Thu, 11 Mar 2004 09:15:41 +0100
+ -- 
 
 cdebconf (0.57) unstable; urgency=low
 
